# gannai

./: .travis.yml  Cargo.toml  README.md
src/: lib.rs  main.rs
src/examples/: neural_network.rs
src/neural_network/: apply.rs  common.rs  error.rs  evolve.rs  graph.rs  id_generator.rs  matrix.rs  mod.rs  mutator.rs  network.rs  train.rs
src/tools/: apply_neural_network.rs  common.rs  evolve_neural_network.rs  generate_neural_network.rs  neural_network_to_dot.rs  train_neural_network.rs
